@@ -36,6 +36,8 @@
 
      .. automethod:: add_view
 
+     .. automethod:: derive_view
+
      .. automethod:: load_zcml(spec)
 
      .. automethod:: make_wsgi_app()
